--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 id="headH1">Weather</h1>
+    <br><h1 id="headH1">Weather</h1>
     <form method="get" class="weatherForm">
         <input type="text" class="cityInput" name="city" placeholder="city name...">
         <button type="submit">Get Weather</button>
@@ -25,4 +25,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
