--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <br><h1 id="headH1">Weather</h1>
+    <br><h1 id="headH1">Weather Traker</h1>
     <form method="get" class="weatherForm">
         <input type="text" class="cityInput" name="city" placeholder="city name...">
         <button type="submit">Get Weather</button>
@@ -20,10 +20,13 @@
         <p class="humidityDisplay">Humidity: 75%</p>
         <p class="descDisplay">Clear Skies</p>
         <p class="wetherEmoji">☀️</p>
-        <p class="errorDisplay">City not found. Please try again.</p>-->
+        <p class="errorDisplay">City not found. Please try again.</p>
+        <div class="humidityInfo">
+            <button class="humidityB">?</button>
+            <p class="humidityP">Humidity is a measure of water vapor in the air.</p>
+        </div>-->
     </div>
 
     <script src="index.js"></script>
 </body>
-
 </html>
