--- a/index.html
+++ b/index.html
@@ -16,15 +16,26 @@
 
     <div class="card" style="display: none;">
         <!--<h1 class="cityDisplay">Miami</h1>
-        <p class="tempDisplay">90°</p>
-        <p class="humidityDisplay">Humidity: 75%</p>
+        <div class="tempDiv">
+            <p class="tempDisplay">90°</p>
+            <div class="feellikeDiv">
+                <p class="feellikeDisplay">Feels Like: 75°F</p>
+                <div class="feellikeInfo">
+                    <button class="feellikeB">?</button>
+                    <p class="feellikeP">"Feels like" temperature accounts for factors beyond air temperature, like wind and humidity, that affect how hot or cold it actually feels to the human body</p>
+                </div>
+            </div>
+        </div>
+        <div class="humidityDiv">
+            <p class="humidityDisplay">Humidity: 75%</p>
+            <div class="humidityInfo">
+                <button class="humidityB">?</button>
+                <p class="humidityP">Humidity is a measure of water vapor in the air.</p>
+            </div>
+        </div>
         <p class="descDisplay">Clear Skies</p>
         <p class="wetherEmoji">☀️</p>
-        <p class="errorDisplay">City not found. Please try again.</p>
-        <div class="humidityInfo">
-            <button class="humidityB">?</button>
-            <p class="humidityP">Humidity is a measure of water vapor in the air.</p>
-        </div>-->
+        <p class="errorDisplay">City not found. Please try again.</p>-->
     </div>
 
     <script src="index.js"></script>
