--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <br><h1 id="headH1">Weather Traker</h1>
+    <br><h1 id="headH1">Weather Tracker</h1>
     <form method="get" class="weatherForm">
         <input type="text" class="cityInput" name="city" placeholder="city name...">
         <button type="submit">Get Weather</button>
