--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <br><h1 id="headH1">Weather Tracker</h1>
-    <form method="get" class="weatherForm">
+    <form class="weatherForm">
         <input type="text" class="cityInput" name="city" placeholder="city name...">
         <button type="submit">Get Weather</button>
     </form>
@@ -66,4 +66,5 @@
     
     <script src="index.js"></script>
 </body>
+
 </html>
