--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <br><h1 id="headH1">Weather Tracker</h1>
-    <form class="weatherForm">
+    <form class="weatherForm" id="weatherForm">
         <input type="text" class="cityInput" name="city" placeholder="city name...">
         <button type="submit">Get Weather</button>
     </form>
@@ -68,3 +68,4 @@
 </body>
 
 </html>
+
